fix gaps & scroll bugs

--- a/src/index.css
+++ b/src/index.css
@@ -53,13 +53,18 @@
 
   html {
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
     scroll-padding-top: 72px;
   }
 
-  .snap,
-  section {
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
+  @media (min-width: 768px) {
+    html {
+      scroll-snap-type: y mandatory;
+    }
+
+    .snap,
+    section {
+      scroll-snap-align: start;
+      scroll-snap-stop: always;
+    }
   }
 }
